@@ -9,18 +9,12 @@ version = "1.0.0"
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(25))
+        languageVersion.set(JavaLanguageVersion.of(21))
     }
 }
 
 repositories {
     mavenCentral()
-}
-
-dependencyManagement {
-    imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:${Versions.springCloud}")
-    }
 }
 
 dependencies {
@@ -31,23 +25,24 @@ dependencies {
 
     implementation(Dependencies.springKafka)
 
-    implementation(Dependencies.postgresql)
+    runtimeOnly(Dependencies.postgresql)
     implementation(Dependencies.flywayCore)
-    implementation(Dependencies.flywayPostgresql)
+    runtimeOnly(Dependencies.flywayPostgresql)
 
     implementation(Dependencies.springdocOpenapi)
-    implementation(Dependencies.micrometerPrometheus)
+    runtimeOnly(Dependencies.micrometerPrometheus)
 
     compileOnly(Dependencies.lombok)
     annotationProcessor(Dependencies.lombok)
 
     implementation(Dependencies.mapstruct)
     annotationProcessor(Dependencies.mapstructProcessor)
+    annotationProcessor("org.projectlombok:lombok-mapstruct-binding:0.2.0")
 
-    // Общие контракты (пока пустые, пригодятся для событий)
     implementation(project(":apiContracts"))
 
     testImplementation(Dependencies.springBootStarterTest)
+    testImplementation(Dependencies.mockitoJunitJupiter)
     testImplementation(platform(Dependencies.testcontainersBom))
     testImplementation(Dependencies.testcontainersJunit)
     testImplementation(Dependencies.testcontainersPostgresql)
@@ -55,4 +50,5 @@ dependencies {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
