@@ -9,7 +9,7 @@ version = "1.0.0"
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(25))
+        languageVersion.set(JavaLanguageVersion.of(21))
     }
 }
 
@@ -23,22 +23,22 @@ dependencies {
     implementation(Dependencies.springBootStarterValidation)
     implementation(Dependencies.springBootStarterActuator)
 
-    implementation(Dependencies.postgresql)
+    runtimeOnly(Dependencies.postgresql)
     implementation(Dependencies.flywayCore)
-    implementation(Dependencies.flywayPostgresql)
+    runtimeOnly(Dependencies.flywayPostgresql)
 
     implementation(Dependencies.springdocOpenapi)
-    implementation(Dependencies.micrometerPrometheus)
+    runtimeOnly(Dependencies.micrometerPrometheus)
 
     compileOnly(Dependencies.lombok)
     annotationProcessor(Dependencies.lombok)
 
     implementation(Dependencies.mapstruct)
     annotationProcessor(Dependencies.mapstructProcessor)
-
-    implementation(project(":apiContracts"))
+    annotationProcessor("org.projectlombok:lombok-mapstruct-binding:0.2.0")
 
     testImplementation(Dependencies.springBootStarterTest)
+    testImplementation(Dependencies.mockitoJunitJupiter)
     testImplementation(platform(Dependencies.testcontainersBom))
     testImplementation(Dependencies.testcontainersJunit)
     testImplementation(Dependencies.testcontainersPostgresql)
@@ -46,4 +46,5 @@ dependencies {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
